--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,9 +18,17 @@ android {
         }
     }
 }
+repositories {
+    mavenCentral()
+}
+
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.1'
+
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+
+    compile 'com.android.volley:volley:1.0.0'
 }
