--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+
         android:allowBackup="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
@@ -19,6 +20,8 @@
             </intent-filter>
 
         </activity>
+        <activity android:name=".model.LoginHelper"></activity>
+
     </application>
 
 </manifest>
