--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,9 +26,11 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+
+
     compile 'com.android.support:appcompat-v7:24.2.1'
-
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
-
     compile 'com.android.volley:volley:1.0.0'
+    compile 'com.android.support:design:24.2.1'
+    compile 'com.android.support:support-v4:24.2.1'
 }
