--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,6 @@ dependencies {
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:recyclerview-v7:24.2.1'
+    compile 'com.sothree.slidinguppanel:library:3.0.0'
+    compile 'com.android.support:multidex:1.0.0'
 }
